kubernetes/apps/base/smokeping/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  namespace: smokeping
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`smokeping.local`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: smokeping-tls
